--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bootstrap": "^5.3.3",
     "font-awesome": "^4.7.0",
+    "lightgallery": "^2.7.2",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
