--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "export": "next build && next export",
+    "sitemap": "next-sitemap",
+    "start": "next",
     "lint": "next lint"
   },
   "dependencies": {
@@ -13,6 +15,7 @@
     "font-awesome": "^4.7.0",
     "lightgallery": "^2.7.2",
     "next": "14.2.3",
+    "next-sitemap": "^4.2.3",
     "react": "^18",
     "react-dom": "^18",
     "react-responsive-carousel": "^3.2.23",
