--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/third-parties": "^15.1.6",
     "axios": "^1.7.7",
     "embla-carousel": "^8.3.0",
     "embla-carousel-autoplay": "^8.3.0",
